[tool.poetry]
name = "pynblint"
version = "0.1.4"
description = "A linter for Jupyter notebooks written in Python."
authors = ["Luigi Quaranta <luigi.quaranta@uniba.it>"]
license = "MIT License"
readme = "README.md"
homepage = "https://pynblint.readthedocs.io/en/latest/"
repository = "https://github.com/collab-uniba/pynblint"
keywords = ["Jupyter", "notebook", "lint", "quality assurance", "static analysis"]
classifiers = [
    "Environment :: Console",
    "Framework :: Jupyter",
    "Topic :: Software Development :: Quality Assurance"
]
include = [
    "LICENSE"
]

[tool.poetry.scripts]
pynblint = "pynblint.main:app"

[tool.poetry.dependencies]
python = "^3.7"
nbformat = "^5.1.3"
nbconvert = "^6.4.0"
GitPython = "^3.1.26"
rich = "^11.1.0"
typer = "^0.4.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
ipython = "<8"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.8"
black = "^21.12b0"
pytest = "^6.2.5"
bandit = "^1.7.1"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pre-commit = "^2.17.0"
pydocstyle = "^6.1.1"
coverage = "^6.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.flake8]
max-line-length = 88

[tool.bandit]
exclude_dirs = ["tests"]
