[tool.poetry]
name = "pynblint"
version = "0.1.6"
description = "A linter for Jupyter notebooks written in Python."
authors = ["Luigi Quaranta <luigi.quaranta@uniba.it>"]
license = "MIT License"
readme = "README.md"
homepage = "https://pynblint.readthedocs.io/en/latest/"
repository = "https://github.com/collab-uniba/pynblint"
keywords = ["Jupyter", "notebook", "lint", "quality assurance", "static analysis"]
classifiers = [
    "Environment :: Console",
    "Framework :: Jupyter",
    "Topic :: Software Development :: Quality Assurance"
]
include = [
    "LICENSE"
]

[tool.poetry.scripts]
pynblint = "pynblint.main:app"

[tool.poetry.dependencies]
python = "^3.8"
nbformat = "^5.10.4"
nbconvert = "^7.16.4"
GitPython = "^3.1.43"
rich = "^13.7.1"
typer = "^0.12.3"
pydantic = "^2.8.2"
ipython = "^8"
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"
black = "^24.4.2"
pytest = "^8.3.1"
bandit = "^1.7.9"
mypy = "^1.11.0"
flake8 = "^4.0.1"
isort = "^5.13.2"
pylint = "^3.2.6"
pre-commit = "^2.17.0"
pydocstyle = "^6.3.0"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.flake8]
max-line-length = 88

[tool.bandit]
exclude_dirs = ["tests"]
